--- a/alembic.ini
+++ b/alembic.ini
@@ -84,7 +84,7 @@ path_separator = os
 # database URL.  This is consumed by the user-maintained env.py script only.
 # other means of configuring database URLs may be customized within the env.py
 # file.
-sqlalchemy.url = driver://probill:log@local127.0.0.1:8000/postgres
+sqlalchemy.url = postgresql+psycopg2://probill:log@127.0.0.1:8000/postgres
 
 
 [post_write_hooks]
